# hostrange

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/hostrange/: __init__.py  _expand.py
tests/: test_expand.py
